/*
 * Copyright (C) 2017 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.service.users.proto;

option java_package = "com.dremio.service.users.proto";
option optimize_for = SPEED;

option java_outer_classname = "UserGroupProtobuf";

message UID {
  required string id = 1;
}

message GID {
  required string id = 1;
}

// NOTE: If you are adding new field here make sure to modify UserGroupServiceImpl#merge
message UserConfig {
  required UID uid = 1;
  optional string userName = 2;
  optional string firstName = 3;
  optional string lastName = 4;
  optional string email = 5;
  optional uint64 createdAt = 6; // date added
  optional uint64 modifiedAt = 7;
  repeated GID groupMemberships = 8;
  optional int64 version = 9;
}

message UserAuth {
  optional UID uid = 1;
  optional bytes prefix = 2;
  optional bytes authKey = 3;
}

message UserInfo {
  optional UserConfig config = 1;
  optional UserAuth auth = 2;
}

